--- a/package.json
+++ b/package.json
@@ -10,18 +10,35 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
+        "deepmerge": "^4.2.2",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "sass": "^1.32.13",
+        "sass-loader": "^11.1.1",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12",
         "webpack-cli": "^4.8.0"
+    },
+    "dependencies": {
+        "cross-env": "^7.0.3",
+        "datatables.net": "^1.10.25",
+        "datatables.net-autofill": "^2.3.9",
+        "datatables.net-autofill-dt": "^2.3.9",
+        "datatables.net-buttons": "^1.7.1",
+        "datatables.net-buttons-dt": "^1.7.1",
+        "datatables.net-dt": "^1.1.0",
+        "datatables.net-editor-server": "^2.0.4",
+        "datatables.net-searchbuilder": "^1.1.0",
+        "datatables.net-searchbuilder-dt": "^1.1.0",
+        "datatables.net-searchpanes": "^1.3.0",
+        "datatables.net-searchpanes-dt": "^1.3.0",
+        "vuetify": "^2.5.8"
     }
 }
